--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "surround"]
 	path = bundle/surround
 	url = git@github.com:tpope/vim-surround.git
+[submodule "fugitive"]
+	path = bundle/fugitive
+	url = git@github.com:tpope/vim-fugitive.git
