--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "pathogen"]
 	path = bundle/pathogen
 	url = git@github.com:tpope/vim-pathogen.git
+[submodule "yankring"]
+	path = bundle/yankring
+	url = git@github.com:vim-scripts/YankRing.vim.git
