Add delmitMate plugin.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "yankring"]
 	path = bundle/yankring
 	url = git@github.com:vim-scripts/YankRing.vim.git
+[submodule "delimitMate"]
+	path = bundle/delimitMate
+	url = git@github.com:Raimondi/delimitMate.git
